force-app/main/default/objects/Toggl_Log__c/Toggl_Log__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Toggl Log</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Toggl Log Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toggl Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>