force-app/main/default/objects/Toggl_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Toggl Log</relationshipLabel>
    <relationshipName>Toggl_Log</relationshipName>
    <type>Lookup</type>
</CustomField>