force-app/main/default/objects/Toggl_Log__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>