force-app/main/default/objects/Toggl_Log__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>