force-app/main/default/objects/Toggl_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>