force-app/main/default/objects/Toggl_Log__c/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Time Entry</label>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Toggl Log</relationshipLabel>
    <relationshipName>Toggl_Log</relationshipName>
    <type>Lookup</type>
</CustomField>