force-app/main/default/objects/Toggl_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>