force-app/main/default/objects/Toggl_Log__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Toggl Log</relationshipLabel>
    <relationshipName>Toggl_Log</relationshipName>
    <type>Lookup</type>
</CustomField>